[package]
name = "blog-backend"
version = "0.3.0"
authors = ["Songday <songday@yeah.net>"]
edition = "2021"

[lib]
name = "blog_backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blog-common = { path = "../common" }

ahash = "0.7"
argon2 = "0.2"
base64 = "0.13"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
comrak = "0.10"
# ctrlc = { version = "3.0", features = ["termination"] }
# crc = "^1.0.0"
futures = "0.3"
hyper = "0.14"
image = { version = "0.23", features = ["jpeg", "png", "gif"] }
lazy_static = "1.4"
lazy-static-include = "3"
once_cell = "1.7"
parking_lot = "0.11"
password-hash = { version = "0.2", features = ["rand_core"] }
# percent-encoding = "2.1"
# pulldown-cmark = "0.8"
rand = "0.8"
regex = "1.5"
reqwest = "0.11"
# subtle = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
sqlx = { version = "0.5", default-features = false, features = [ "runtime-tokio-rustls", "macros", "sqlite"], optional = false }
#scrypt = { version = "0.6", default-features = false }
tera = "1.12.1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "signal", "time"] }
uuid = { version = "0.8", features = ["v5"] }
urlencoding = "1.3"
v_htmlescape = "0.13"
warp = "0.3"

# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
# https://doc.rust-lang.org/reference/conditional-compilation.html
[target.'cfg(target_env = "gnu")'.dependencies]
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
flate2 = "1.0"
