[package]
name = "blog-common"
version = "0.1.0"
authors = ["Songday"]
edition = "2018"

[lib]
name = "blog_common"
# crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
yew = "0.18"
