[package]
name = "blog-common"
version = "0.5.6"
authors = ["Songday"]
edition = "2021"

[lib]
name = "blog_common"
# crate-type = ["cdylib", "rlib"]

[dependencies]
# time = { version = "0.3", features = ["serde"] }
#lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
#yew = {git = "https://github.com/yewstack/yew", branch = "master"}
