[package]
name = "blog-frontend"
version = "0.5.6"
authors = ["Songday"]
edition = "2021"

[lib]
name = "blog_frontend"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

blog-common = { path = "../common" }
#fastrand = "1.7"
fluent = "0.16"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.8"
gloo-file = "0.2"
gloo-utils = "0.1"
js-sys = "0.3"
thiserror = "1.0"
#parking_lot = { version = "0.12", features = ["wasm-bindgen"]}
#lazy_static = "1.4
rand = { version = "0.8", features = ["small_rng"] }
reqwasm = "0.5"
serde = "1.0"
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
#unic-langid = "0.9"
urlencoding = "2"
wasm-bindgen-futures = "0.4"
weblog = "0.3.0"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlDocument"] }
wee_alloc = { version = "0.4" }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
#yew = {git = "https://github.com/yewstack/yew", branch = "master", features = ["csr"]}
#yew-router = { git = "https://github.com/yewstack/yew", branch="master" }
yew-agent = { git = "https://github.com/yewstack/yew", branch="master" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

